--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select id="priority">
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
     <div id="list">
-      <h2>My Todos</h2>
+      <h2>My To-dos</h2>
       <ul id="tasks">
       </ul>
     </div>
